make admin  authentication

--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -8,8 +8,7 @@
         </div>
     </button>
     <div *ngIf="!isconnected">
-        <a href="#"> <img alt="cantière-logo" src="../../assets/logo.png"> </a>
-
+     <img alt="cantière-logo" src="../../assets/logo.png">
     </div>
 
     <div class="logo-container">
