add getAdminById Component

--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -37,8 +37,10 @@
 
         <img class="avatar mat-elevation-z8" src="https://source.unsplash.com/c_GmwfHBDzk/200x200"/>
 
-        <h4 class="name">John Smith</h4>
-        <p class="designation"> Aston Student 😇 </p>
+        <h4 class="name">{{admin.firstname}}  {{admin.lastname}}</h4>
+        <p class="designation"> {{admin.function}} </p>
+
+        <p class="designation"> Aston Administrator 😇 </p>
 
         <mat-divider></mat-divider>
 
