update  admin  profile  component

--- a/Frontend/Cantine/src/app/admin/dashbord/admin-dashboard/admin-profile/admin-profile.component.html
+++ b/Frontend/Cantine/src/app/admin/dashbord/admin-dashboard/admin-profile/admin-profile.component.html
@@ -2,10 +2,10 @@
     <div class="row">
 
 
-        <form [formGroup]="adminUpdated" class="test">
+        <form [formGroup]="adminUpdated" class="test" >
             <div class="wallet center">
-                <img id="profile-picture">
-               <!-- <h1>{{user.firstname}}   {{user.lastname}}</h1>-->
+                <img id="profile-picture" src="{{admin.image}}" >
+                <h1>{{admin.firstname}}   {{admin.lastname}}</h1>
 
             </div>
 
