add  Admin  Order  service

--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -53,7 +53,7 @@
             <span>Etudiants</span>
         </button>
 
-        <button class="menu-button" mat-button>
+        <button class="menu-button" mat-button (click)="goToOrders()">
             <mat-icon>shopping_cart</mat-icon>
             <span>  Commandes  </span>
             <mat-icon class="badge" matBadge="10" matBadgeColor="warn" matBadgePosition="above after"></mat-icon>
