--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -83,12 +83,12 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <main>  <!-- we  make  style here  because   we  want to  share it between  all  admin  pages  -->
-            <header style="width: 100%;
+          <!--  <header style="width: 100%;
              height: 40vh;
              background: url('../../../assets/images/homepage.jpg') 30% 30% no-repeat;
              background-size: cover;
              background-color: #f8f8f8;">
-            </header><!-- content  -->
+            </header>&lt;!&ndash;!-- content  -->
             <router-outlet></router-outlet>     <!--  main  container  -->
         </main>
         <app-main-footer></app-main-footer>
