--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="connect">
-        <button>
+        <button (click)="logout()">
             <mat-icon>logout</mat-icon>
               Deconnexion
         </button>
@@ -74,7 +74,7 @@
 
         <mat-divider></mat-divider>
 
-        <button class="menu-button" mat-button>
+        <button class="menu-button" mat-button (click)="logout()">
 
             <mat-icon>logout</mat-icon>
             <span>Deconnexion</span>
