--- a/Frontend/Cantine/src/app/student/order/order-dashbord/order-dashboard.component.html
+++ b/Frontend/Cantine/src/app/student/order/order-dashbord/order-dashboard.component.html
@@ -58,8 +58,11 @@
             <div class="col-md-2">
                 <span><strong>Prix total : </strong> {{order.price}} € </span>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2" *ngIf="order.status == 0 ">
                 <button class="btn btn-success" (click)="validateOrder()">Annuler</button>
+            </div>
+            <div class="col-md-2" *ngIf="order.status == 1 ">
+                <h3  style="color : #25de25"> Déja Validé </h3>
             </div>
         </div>
     </div>
