add student management service

--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -48,7 +48,7 @@
             <mat-icon>person</mat-icon>
             <span>Profile</span>
         </button>
-        <button class="menu-button" mat-button>
+        <button class="menu-button" mat-button (click)="goToStudents()">
             <mat-icon>person</mat-icon>
             <span>Etudiants</span>
         </button>
