add  dialogue  component  for  add  xallet  to  student

--- a/Frontend/Cantine/src/app/admin/student-management/manage-student-wallet/manage-student-wallet.component.html
+++ b/Frontend/Cantine/src/app/admin/student-management/manage-student-wallet/manage-student-wallet.component.html
@@ -89,7 +89,7 @@
         </form>
 
         <div class="center">
-            <button class="btn"> Ajouter   Un  montant </button>
+            <button class="btn" (click)="addAmount()"> Ajouter   Un  montant </button>
             <button class="btn"> Soustraire  Un montant </button>
         </div>
 
