update  student  model in  admin  mdn

--- a/Frontend/Cantine/src/app/admin/student-management/manage-student-wallet/manage-student-wallet.component.html
+++ b/Frontend/Cantine/src/app/admin/student-management/manage-student-wallet/manage-student-wallet.component.html
@@ -1,6 +1,5 @@
-<div class="loading-dialog"  *ngIf="isLoadingPage">
-    <app-loading-dialog></app-loading-dialog>
-</div>
+
+    <app-loading-dialog *ngIf="isLoadingPage"></app-loading-dialog>
 
 <div class="container test ">
     <div class="row">
@@ -144,16 +143,5 @@
         height: 15vh;
     }
 
-    .loading-dialog {
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 1000;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+
 </style>
