--- a/Frontend/Cantine/src/app/core-cantine/forgot-password/forgot-password.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-
+<app-loading-dialog *ngIf="isLoadingPage"></app-loading-dialog>
 <div class="container-password">
 
                        <div class="card text-center" >
@@ -29,7 +29,7 @@
                   </form>
                  <p class="email-not-found-text" *ngIf="submitted && !emailExist">  Votre  Email N'existe  Pas  </p>
                  <p class="card-text">Nous enverrons un code de vérification à cette adresse e-mail ou à ce numéro de téléphone si un compte Cantinière existant correspond</p>
-                  <button class="btn" (click)="OnSubmit()"> soumettre </button>
+                  <button class="btn" (click)="OnSubmit()" *ngIf="!isLoadingPage"> soumettre </button>
              </div>
          </div>
 
